[gd_scene load_steps=5 format=3 uid="uid://cpriapgjo1868"]

[ext_resource type="Script" path="res://scripts/items/item_bed.gd" id="1_jydh1"]
[ext_resource type="Texture2D" uid="uid://iddg5qj73wnr" path="res://textures/sprites/items/bed-red.png" id="2_qrhhf"]
[ext_resource type="AudioStream" uid="uid://dhsef6p5hr5jm" path="res://audio/item-place.wav" id="3_1o4t6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3iowr"]
size = Vector2(96, 61)

[node name="BedRed" type="Node2D"]
script = ExtResource("1_jydh1")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_qrhhf")

[node name="InteractionArea" type="Area2D" parent="."]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 40)
shape = SubResource("RectangleShape2D_3iowr")

[node name="PlaceDownAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1o4t6")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
